--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
         </div>
       </div>
 
-      <div class="container header">
+      <div class="container header hero-contact">
         <img
           src="img/background/background-triangle.png"
           class="triangle-bkg"
