--- a/appointment.html
+++ b/appointment.html
@@ -149,15 +149,64 @@
           <div class="form-container">
             <div class="form" id="form-1">
               <h3>Service</h3>
-              <form>
-                <div class="form-group">
-                  <label for="firstName">First Name:</label>
-                  <input type="text" class="form-control" id="firstName" />
+              <form class="cards-container">
+                <div
+                  class="card"
+                  id="service1"
+                  onclick="selectService('service1')"
+                >
+                  Women's cut
                 </div>
-                <div class="form-group">
-                  <label for="lastName">Last Name:</label>
-                  <input type="text" class="form-control" id="lastName" />
+                <div
+                  class="card"
+                  id="service2"
+                  onclick="selectService('service2')"
+                >
+                  Man's cut
                 </div>
+                <div
+                  class="card"
+                  id="service3"
+                  onclick="selectService('service3')"
+                >
+                  Kid's cut
+                </div>
+                <div
+                  class="card"
+                  id="service4"
+                  onclick="selectService('service4')"
+                >
+                  Hot towel shave
+                </div>
+                <div
+                  class="card"
+                  id="service5"
+                  onclick="selectService('service5')"
+                >
+                  Beard trim
+                </div>
+                <div
+                  class="card"
+                  id="service6"
+                  onclick="selectService('service6')"
+                >
+                  Coloring
+                </div>
+                <div
+                  class="card"
+                  id="service7"
+                  onclick="selectService('service7')"
+                >
+                  Wash
+                </div>
+                <div
+                  class="card"
+                  id="service8"
+                  onclick="selectService('service8')"
+                >
+                  Blowout
+                </div>
+                <div class="message-error-service"></div>
               </form>
             </div>
 
