--- a/appointment.html
+++ b/appointment.html
@@ -214,9 +214,7 @@
 
             <div class="form" id="form-2">
               <h3>Choose one stylist</h3>
-              <form class="stylist-cards">
-                <div id="stilistiContainer"></div>
-              </form>
+              <form class="stylist-cards"></form>
             </div>
 
             <div class="form" id="form-3">
