--- a/appointment.html
+++ b/appointment.html
@@ -6,10 +6,6 @@
     <title>Appointment</title>
 
     <link rel="stylesheet" href="src/scss/main.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
 
     <link
       rel="stylesheet"
@@ -39,58 +35,53 @@
     <!-- HEADER -->
     <header class="header">
       <div class="nav-fixed">
-        <div class="container">
-          <nav class="navigation-component">
-            <div class="elements-nav">
-              <a href="index.html" class="logo"
-                ><img src="img/logo/logo-white.png" alt=""
-              /></a>
+        <nav class="navigation-component">
+          <div class="elements-nav">
+            <a href="index.html" class="logo"
+              ><img src="img/logo/logo-white.png" alt=""
+            /></a>
 
-              <div class="menu">
-                <ul class="list">
-                  <li class="list-link">
-                    <a href="index.html" class="link-menu">Home</a>
-                  </li>
-                  <li class="list-link submenu-active">
-                    <a href="about-us.html" class="link-menu space">About Us</a>
-                  </li>
-                  <li class="list-link">
-                    <a href="appointment.html" class="link-menu active"
-                      >Appointment</a
-                    >
-                  </li>
-                  <li class="list-link">
-                    <a href="contact.html" class="link-menu">Contact</a>
-                  </li>
-                </ul>
-                <a
-                  href="#login"
-                  rel="modal:open"
-                  class="primary-button modal-btn"
-                  >Login</a
-                >
-              </div>
-
-              <div class="hamburger">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-              </div>
+            <div class="menu">
+              <ul class="list">
+                <li class="list-link">
+                  <a href="index.html" class="link-menu">Home</a>
+                </li>
+                <li class="list-link submenu-active">
+                  <a href="about-us.html" class="link-menu space">About Us</a>
+                </li>
+                <li class="list-link">
+                  <a href="appointment.html" class="link-menu active"
+                    >Appointment</a
+                  >
+                </li>
+                <li class="list-link">
+                  <a href="contact.html" class="link-menu">Contact</a>
+                </li>
+              </ul>
+              <a href="#login" rel="modal:open" class="primary-button modal-btn"
+                >Login</a
+              >
             </div>
-          </nav>
-        </div>
+
+            <div class="hamburger">
+              <span class="bar"></span>
+              <span class="bar"></span>
+              <span class="bar"></span>
+            </div>
+          </div>
+        </nav>
       </div>
 
-      <div class="container header">
+      <div class="container header hero-appointment">
         <img
           src="img/background/background-triangle.png"
           class="triangle-bkg"
           alt=""
         />
-        <div class="hero-component left-img">
+        <div class="hero-component appoinment-hero">
           <div class="hero-description">
             <h1 class="hero-title about-us-title">
-              Know Us <span class="accent-yellow">Better</span>
+              Make An <span class="accent-yellow">Appointment</span>
             </h1>
             <p class="hero-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit aliqua. Ut
@@ -98,18 +89,22 @@
               nisi ut aliquip ex ea commodo consequat.
             </p>
             <div class="buttons-container">
-              <a href="appointment.html" class="primary-button"
-                >Make an appointment</a
+              <a href="about-us.html#team" class="primary-button transp"
+                >Find a barber</a
               >
-              <a href="#team" class="primary-button transp">Find a barber</a>
             </div>
           </div>
-          <div class="hero-img">
-            <img src="img/salon/barber-shop-salon-6.jpg" alt="" />
+          <div class="hero-img appointment-img">
+            <img src="img/icons/appointment.png" alt="" />
           </div>
         </div>
       </div>
     </header>
+
+    <!-- Back to top Button -->
+    <a href="#" class="back-to-top">
+      <i class="fa fa-arrow-up"></i>
+    </a>
 
     <!-- APPOINTMENT FORM -->
     <section class="container">
@@ -348,49 +343,45 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-      <div class="container">
-        <div class="footer-links">
-          <a href="index.html" class="logo">
-            <img src="img/logo/logo-black.png" alt="Logo" />
-          </a>
-          <div class="footer-list">
-            <p class="title-list">Menu</p>
-            <a class="item-list" href="index.html">Home</a>
-            <a class="item-list" href="about-us.html">About Us</a>
-            <a class="item-list" href="appointment.html">Appointment</a>
-            <a class="item-list" href="contact.html">Contact</a>
-          </div>
+      <div class="footer-links">
+        <a href="index.html" class="logo">
+          <img src="img/logo/logo-black.png" alt="Logo" />
+        </a>
+        <div class="footer-list">
+          <p class="title-list">Menu</p>
+          <a class="item-list" href="index.html">Home</a>
+          <a class="item-list" href="about-us.html">About Us</a>
+          <a class="item-list" href="appointment.html">Appointment</a>
+          <a class="item-list" href="contact.html">Contact</a>
+        </div>
 
-          <div class="footer-list">
-            <p class="title-list">Follow Us</p>
-            <a
-              class="item-list"
-              target="_blank"
-              href="https://www.instagram.com/"
-              >Instagram</a
-            >
-            <a
-              class="item-list"
-              target="_blank"
-              href="https://www.facebook.com/?locale=ro_RO"
-              >Facebook</a
-            >
-          </div>
+        <div class="footer-list">
+          <p class="title-list">Follow Us</p>
+          <a class="item-list" target="_blank" href="https://www.instagram.com/"
+            >Instagram</a
+          >
+          <a
+            class="item-list"
+            target="_blank"
+            href="https://www.facebook.com/?locale=ro_RO"
+            >Facebook</a
+          >
+        </div>
 
-          <div class="footer-list">
-            <p class="title-list">Contact Us</p>
-            <a
-              href="https://www.google.com/maps/place/Strada+Florilor+34,+Flore%C8%99ti+407280/@46.740548,23.494686,17z/data=!4m6!3m5!1s0x47490fd42b403af9:0x968e99efecefac54!8m2!3d46.7405477!4d23.4946855!16s%2Fg%2F11s_v8dqm_?hl=ro&entry=ttu"
-              target="_blank"
-              class="item-list"
-              href="#s"
-              >Cluj-Napoca, Florești, str. Florilor 34</a
-            >
-            <a href="mailto:barberShop@yahoo.com" class="item-list"
-              >barberShop@yahoo.com</a
-            >
-            <a href="tel:+40745667893" class="item-list">+40745667893</a>
-          </div>
+        <div class="footer-list">
+          <p class="title-list">Contact Us</p>
+          <a
+            href="https://www.google.com/maps/place/Strada+Florilor+34,+Flore%C8%99ti+407280/@46.740548,23.494686,17z/data=!4m6!3m5!1s0x47490fd42b403af9:0x968e99efecefac54!8m2!3d46.7405477!4d23.4946855!16s%2Fg%2F11s_v8dqm_?hl=ro&entry=ttu"
+            target="_blank"
+            class="item-list"
+            href="#s"
+            >Cluj-Napoca, Florești,<br />
+            str. Florilor 34</a
+          >
+          <a href="mailto:barberShop@yahoo.com" class="item-list"
+            >barberShop@yahoo.com</a
+          >
+          <a href="tel:+40745667893" class="item-list">+40745667893</a>
         </div>
       </div>
     </footer>
