--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="src/scss/main.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
 
     <link
@@ -28,50 +28,44 @@
     />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.0/jquery.validate.min.js"></script>
   </head>
   <body>
     <!-- HEADER -->
     <header class="header">
       <div class="nav-fixed">
-        <div class="container">
-          <nav class="navigation-component">
-            <div class="elements-nav">
-              <a href="index.html" class="logo"
-                ><img src="img/logo/logo-white.png" alt=""
-              /></a>
+        <nav class="navigation-component">
+          <div class="elements-nav">
+            <a href="index.html" class="logo"
+              ><img src="img/logo/logo-white.png" alt=""
+            /></a>
 
-              <div class="menu">
-                <ul class="list">
-                  <li class="list-link">
-                    <a href="index.html" class="link-menu">Home</a>
-                  </li>
-                  <li class="list-link submenu-active">
-                    <a href="about-us.html" class="link-menu space">About Us</a>
-                  </li>
-                  <li class="list-link">
-                    <a href="appointment.html" class="link-menu">Appointment</a>
-                  </li>
-                  <li class="list-link">
-                    <a href="contact.html" class="link-menu active">Contact</a>
-                  </li>
-                </ul>
-                <a
-                  href="#login"
-                  rel="modal:open"
-                  class="primary-button modal-btn"
-                  >Login</a
-                >
-              </div>
-
-              <div class="hamburger">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-              </div>
+            <div class="menu">
+              <ul class="list">
+                <li class="list-link">
+                  <a href="index.html" class="link-menu">Home</a>
+                </li>
+                <li class="list-link submenu-active">
+                  <a href="about-us.html" class="link-menu space">About Us</a>
+                </li>
+                <li class="list-link">
+                  <a href="appointment.html" class="link-menu">Appointment</a>
+                </li>
+                <li class="list-link">
+                  <a href="contact.html" class="link-menu active">Contact</a>
+                </li>
+              </ul>
+              <a href="#login" rel="modal:open" class="primary-button modal-btn"
+                >Login</a
+              >
             </div>
-          </nav>
-        </div>
+
+            <div class="hamburger">
+              <span class="bar"></span>
+              <span class="bar"></span>
+              <span class="bar"></span>
+            </div>
+          </div>
+        </nav>
       </div>
 
       <div class="container header hero-contact">
@@ -135,6 +129,11 @@
       </div>
     </header>
 
+    <!-- Back to top Button -->
+    <a href="#" class="back-to-top">
+      <i class="fa fa-arrow-up"></i>
+    </a>
+
     <!-- MAPS -->
     <section class="container">
       <div class="map-intro">
@@ -162,15 +161,21 @@
         <div class="form-text-box">
           <h2 class="title">Lorem ipsum dolor sit amet, consectetur</h2>
 
-          <form class="cta-form" method="post" name="sign-up" netlify="">
+          <form
+            class="cta-form"
+            method="post"
+            name="sign-up"
+            netlify=""
+            id="form-contact"
+          >
             <div class="personal-info">
               <div class="form-item">
                 <label for="full-name">Full Name *</label>
                 <input
-                  id="full-name"
+                  id="fullName"
                   type="text"
                   placeholder="John Dale"
-                  name="Full-name"
+                  name="fullName"
                   required=""
                 />
               </div>
@@ -180,23 +185,46 @@
                   id="email"
                   type="email"
                   placeholder="me@exemple.com"
-                  name="Email"
+                  name="email"
                   required=""
                 />
               </div>
             </div>
 
             <div class="form-item">
-              <label for="textarea">Your Review</label>
+              <label for="textarea">Your Message</label>
               <textarea
-                name="Review"
+                name="Message"
                 cols="30"
                 rows="10"
                 placeholder="Write your review here."
               ></textarea>
             </div>
 
-            <button class="btn">Send Review</button>
+            <input
+              type="submit"
+              value="Send Message"
+              class="btn"
+              id="circle-bar"
+            />
+
+            <div class="circle-bar">
+              <svg
+                class="radial-progress"
+                data-percentage="100"
+                viewBox="0 0 80 80"
+              >
+                <circle class="incomplete" cx="40" cy="40" r="35"></circle>
+                <circle
+                  class="complete"
+                  cx="40"
+                  cy="40"
+                  r="35"
+                  style="stroke-dashoffset: 0"
+                ></circle>
+              </svg>
+              <div class="percentage"></div>
+            </div>
           </form>
         </div>
 
@@ -208,49 +236,45 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-      <div class="container">
-        <div class="footer-links">
-          <a href="index.html" class="logo">
-            <img src="img/logo/logo-black.png" alt="Logo" />
-          </a>
-          <div class="footer-list">
-            <p class="title-list">Menu</p>
-            <a class="item-list" href="index.html">Home</a>
-            <a class="item-list" href="about-us.html">About Us</a>
-            <a class="item-list" href="appointment.html">Appointment</a>
-            <a class="item-list" href="contact.html">Contact</a>
-          </div>
+      <div class="footer-links">
+        <a href="index.html" class="logo">
+          <img src="img/logo/logo-black.png" alt="Logo" />
+        </a>
+        <div class="footer-list">
+          <p class="title-list">Menu</p>
+          <a class="item-list" href="index.html">Home</a>
+          <a class="item-list" href="about-us.html">About Us</a>
+          <a class="item-list" href="appointment.html">Appointment</a>
+          <a class="item-list" href="contact.html">Contact</a>
+        </div>
 
-          <div class="footer-list">
-            <p class="title-list">Follow Us</p>
-            <a
-              class="item-list"
-              target="_blank"
-              href="https://www.instagram.com/"
-              >Instagram</a
-            >
-            <a
-              class="item-list"
-              target="_blank"
-              href="https://www.facebook.com/?locale=ro_RO"
-              >Facebook</a
-            >
-          </div>
+        <div class="footer-list">
+          <p class="title-list">Follow Us</p>
+          <a class="item-list" target="_blank" href="https://www.instagram.com/"
+            >Instagram</a
+          >
+          <a
+            class="item-list"
+            target="_blank"
+            href="https://www.facebook.com/?locale=ro_RO"
+            >Facebook</a
+          >
+        </div>
 
-          <div class="footer-list">
-            <p class="title-list">Contact Us</p>
-            <a
-              href="https://www.google.com/maps/place/Strada+Florilor+34,+Flore%C8%99ti+407280/@46.740548,23.494686,17z/data=!4m6!3m5!1s0x47490fd42b403af9:0x968e99efecefac54!8m2!3d46.7405477!4d23.4946855!16s%2Fg%2F11s_v8dqm_?hl=ro&entry=ttu"
-              target="_blank"
-              class="item-list"
-              href="#s"
-              >Cluj-Napoca, Florești, str. Florilor 34</a
-            >
-            <a href="mailto:barberShop@yahoo.com" class="item-list"
-              >barberShop@yahoo.com</a
-            >
-            <a href="tel:+40745667893" class="item-list">+40745667893</a>
-          </div>
+        <div class="footer-list">
+          <p class="title-list">Contact Us</p>
+          <a
+            href="https://www.google.com/maps/place/Strada+Florilor+34,+Flore%C8%99ti+407280/@46.740548,23.494686,17z/data=!4m6!3m5!1s0x47490fd42b403af9:0x968e99efecefac54!8m2!3d46.7405477!4d23.4946855!16s%2Fg%2F11s_v8dqm_?hl=ro&entry=ttu"
+            target="_blank"
+            class="item-list"
+            href="#s"
+            >Cluj-Napoca, Florești,<br />
+            str. Florilor 34</a
+          >
+          <a href="mailto:barberShop@yahoo.com" class="item-list"
+            >barberShop@yahoo.com</a
+          >
+          <a href="tel:+40745667893" class="item-list">+40745667893</a>
         </div>
       </div>
     </footer>
@@ -259,6 +283,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/textfit/2.4.0/textFit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.0/circle-progress.min.js"></script>
 
+    <script src="src/js/jquery.validate.min.js"></script>
     <script src="src/js/script.js"></script>
   </body>
 </html>
