--- a/member-team.html
+++ b/member-team.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="src/scss/main.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
 
     <link
@@ -34,46 +34,41 @@
     <!-- HEADER -->
     <header class="header member-page">
       <div class="nav-fixed">
-        <div class="container">
-          <nav class="navigation-component">
-            <div class="elements-nav">
-              <a href="index.html" class="logo"
-                ><img src="img/logo/logo-white.png" alt=""
-              /></a>
+        <nav class="navigation-component">
+          <div class="elements-nav">
+            <a href="index.html" class="logo"
+              ><img src="img/logo/logo-white.png" alt=""
+            /></a>
 
-              <div class="menu">
-                <ul class="list">
-                  <li class="list-link">
-                    <a href="index.html" class="link-menu">Home</a>
-                  </li>
-                  <li class="list-link submenu-active">
-                    <a href="about-us.html" class="link-menu space active"
-                      >About Us</a
-                    >
-                  </li>
-                  <li class="list-link">
-                    <a href="appointment.html" class="link-menu">Appointment</a>
-                  </li>
-                  <li class="list-link">
-                    <a href="contact.html" class="link-menu">Contact</a>
-                  </li>
-                </ul>
-                <a
-                  href="#login"
-                  rel="modal:open"
-                  class="primary-button modal-btn"
-                  >Login</a
-                >
-              </div>
-
-              <div class="hamburger">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-              </div>
+            <div class="menu">
+              <ul class="list">
+                <li class="list-link">
+                  <a href="index.html" class="link-menu">Home</a>
+                </li>
+                <li class="list-link submenu-active">
+                  <a href="about-us.html" class="link-menu space active"
+                    >About Us</a
+                  >
+                </li>
+                <li class="list-link">
+                  <a href="appointment.html" class="link-menu">Appointment</a>
+                </li>
+                <li class="list-link">
+                  <a href="contact.html" class="link-menu">Contact</a>
+                </li>
+              </ul>
+              <a href="#login" rel="modal:open" class="primary-button modal-btn"
+                >Login</a
+              >
             </div>
-          </nav>
-        </div>
+
+            <div class="hamburger">
+              <span class="bar"></span>
+              <span class="bar"></span>
+              <span class="bar"></span>
+            </div>
+          </div>
+        </nav>
       </div>
 
       <div class="container member-page-container header">
@@ -122,6 +117,11 @@
         </div>
       </div>
     </header>
+
+    <!-- Back to top Button -->
+    <a href="#" class="back-to-top">
+      <i class="fa fa-arrow-up"></i>
+    </a>
 
     <section class="price-container">
       <div class="price-content">
@@ -208,49 +208,45 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-      <div class="container">
-        <div class="footer-links">
-          <a href="index.html" class="logo">
-            <img src="img/logo/logo-black.png" alt="Logo" />
-          </a>
-          <div class="footer-list">
-            <p class="title-list">Menu</p>
-            <a class="item-list" href="index.html">Home</a>
-            <a class="item-list" href="about-us.html">About Us</a>
-            <a class="item-list" href="appointment.html">Appointment</a>
-            <a class="item-list" href="contact.html">Contact</a>
-          </div>
+      <div class="footer-links">
+        <a href="index.html" class="logo">
+          <img src="img/logo/logo-black.png" alt="Logo" />
+        </a>
+        <div class="footer-list">
+          <p class="title-list">Menu</p>
+          <a class="item-list" href="index.html">Home</a>
+          <a class="item-list" href="about-us.html">About Us</a>
+          <a class="item-list" href="appointment.html">Appointment</a>
+          <a class="item-list" href="contact.html">Contact</a>
+        </div>
 
-          <div class="footer-list">
-            <p class="title-list">Follow Us</p>
-            <a
-              class="item-list"
-              target="_blank"
-              href="https://www.instagram.com/"
-              >Instagram</a
-            >
-            <a
-              class="item-list"
-              target="_blank"
-              href="https://www.facebook.com/?locale=ro_RO"
-              >Facebook</a
-            >
-          </div>
+        <div class="footer-list">
+          <p class="title-list">Follow Us</p>
+          <a class="item-list" target="_blank" href="https://www.instagram.com/"
+            >Instagram</a
+          >
+          <a
+            class="item-list"
+            target="_blank"
+            href="https://www.facebook.com/?locale=ro_RO"
+            >Facebook</a
+          >
+        </div>
 
-          <div class="footer-list">
-            <p class="title-list">Contact Us</p>
-            <a
-              href="https://www.google.com/maps/place/Strada+Florilor+34,+Flore%C8%99ti+407280/@46.740548,23.494686,17z/data=!4m6!3m5!1s0x47490fd42b403af9:0x968e99efecefac54!8m2!3d46.7405477!4d23.4946855!16s%2Fg%2F11s_v8dqm_?hl=ro&entry=ttu"
-              target="_blank"
-              class="item-list"
-              href="#s"
-              >Cluj-Napoca, Florești, str. Florilor 34</a
-            >
-            <a href="mailto:barberShop@yahoo.com" class="item-list"
-              >barberShop@yahoo.com</a
-            >
-            <a href="tel:+40745667893" class="item-list">+40745667893</a>
-          </div>
+        <div class="footer-list">
+          <p class="title-list">Contact Us</p>
+          <a
+            href="https://www.google.com/maps/place/Strada+Florilor+34,+Flore%C8%99ti+407280/@46.740548,23.494686,17z/data=!4m6!3m5!1s0x47490fd42b403af9:0x968e99efecefac54!8m2!3d46.7405477!4d23.4946855!16s%2Fg%2F11s_v8dqm_?hl=ro&entry=ttu"
+            target="_blank"
+            class="item-list"
+            href="#s"
+            >Cluj-Napoca, Florești, <br />
+            str. Florilor 34</a
+          >
+          <a href="mailto:barberShop@yahoo.com" class="item-list"
+            >barberShop@yahoo.com</a
+          >
+          <a href="tel:+40745667893" class="item-list">+40745667893</a>
         </div>
       </div>
     </footer>
