--- a/about-us.html
+++ b/about-us.html
@@ -77,8 +77,8 @@
               <a href="#team" class="primary-button transp">Find a barber</a>
             </div>
           </div>
-          <div class="hero-img about-img">
-            <img src="img/icons/Our Team(1).png" alt="" />
+          <div class="hero-img about-img" id="moving-image">
+            <img src="img/icons/team.png" alt="" id="about-img"/>
           </div>
         </div>
       </div>
