--- a/appointment.html
+++ b/appointment.html
@@ -34,7 +34,7 @@
   <body>
     <!-- HEADER -->
     <header class="header">
-      <div class="nav-fixed">
+      <div id="nav-fixed">
         <nav class="navigation-component">
           <div class="elements-nav">
             <a href="index.html" class="logo"
@@ -44,23 +44,33 @@
             <div class="menu">
               <ul class="list">
                 <li class="list-link">
-                  <a href="index.html" class="link-menu">Home</a>
+                  <a href="index.html" class="link-menu active" id="linkNav"
+                    >Home</a
+                  >
                 </li>
                 <li class="list-link submenu-active">
-                  <a href="about-us.html" class="link-menu space">About Us</a>
+                  <a href="about-us.html" class="link-menu space" id="linkNav"
+                    >About Us</a
+                  >
                 </li>
                 <li class="list-link">
-                  <a href="appointment.html" class="link-menu active"
+                  <a href="appointment.html" class="link-menu" id="linkNav"
                     >Appointment</a
                   >
                 </li>
                 <li class="list-link">
-                  <a href="contact.html" class="link-menu">Contact</a>
+                  <a href="contact.html" class="link-menu" id="linkNav"
+                    >Contact</a
+                  >
                 </li>
               </ul>
-              <a href="#login" rel="modal:open" class="primary-button modal-btn"
-                >Login</a
-              >
+              <a
+                href="#login"
+                rel="modal:open"
+                id="nav-btn"
+                class="primary-button nav"
+                ><i class="fa fa-phone icon"></i
+              ></a>
             </div>
 
             <div class="hamburger">
@@ -73,15 +83,10 @@
       </div>
 
       <div class="container header hero-appointment">
-        <img
-          src="img/background/background-triangle.png"
-          class="triangle-bkg"
-          alt=""
-        />
         <div class="hero-component appoinment-hero">
           <div class="hero-description">
             <h1 class="hero-title about-us-title">
-              Make An <span class="accent-yellow">Appointment</span>
+              Make An <span class="accent-yellow hero-mid">Appointment</span>
             </h1>
             <p class="hero-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit aliqua. Ut
@@ -214,7 +219,8 @@
               <form id="form-appointment">
                 <div class="item-form">
                   <label for="date" class="label-form"
-                    >Date <span class="required">*</span></label
+                    ><i class="fa-regular fa-calendar icon"></i> Date
+                    <span class="required">*</span></label
                   >
                   <input
                     type="date"
@@ -226,7 +232,8 @@
                 </div>
                 <div class="item-form">
                   <label for="time" class="label-form"
-                    >Select a time <span class="required">*</span></label
+                    ><i class="fa-regular fa-clock icon"></i> Select a time
+                    <span class="required">*</span></label
                   >
                   <input
                     type="time"
@@ -246,7 +253,8 @@
               <form id="form-personal-info">
                 <div class="item-form">
                   <label for="fullName" class="label-form"
-                    >Full name <span class="required">*</span></label
+                    ><i class="fa fa-user icon"></i>Full name
+                    <span class="required">*</span></label
                   >
                   <input
                     type="text"
@@ -259,7 +267,8 @@
                 </div>
                 <div class="item-form">
                   <label for="phone" class="label-form"
-                    >Phone <span class="required">*</span></label
+                    ><i class="fa fa-phone icon"></i>Phone
+                    <span class="required">*</span></label
                   >
                   <input
                     type="text"
@@ -333,6 +342,10 @@
           <a href="tel:+40745667893" class="item-list">+40745667893</a>
         </div>
       </div>
+
+      <a href="https://storyset.com/work" class="storyset"
+        >Work illustrations by Storyset</a
+      >
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
