--- a/member-team.html
+++ b/member-team.html
@@ -33,7 +33,7 @@
   <body>
     <!-- HEADER -->
     <header class="header member-page">
-      <div class="nav-fixed">
+      <div id="nav-fixed">
         <nav class="navigation-component">
           <div class="elements-nav">
             <a href="index.html" class="logo"
@@ -43,23 +43,33 @@
             <div class="menu">
               <ul class="list">
                 <li class="list-link">
-                  <a href="index.html" class="link-menu">Home</a>
+                  <a href="index.html" class="link-menu active" id="linkNav"
+                    >Home</a
+                  >
                 </li>
                 <li class="list-link submenu-active">
-                  <a href="about-us.html" class="link-menu space active"
+                  <a href="about-us.html" class="link-menu space" id="linkNav"
                     >About Us</a
                   >
                 </li>
                 <li class="list-link">
-                  <a href="appointment.html" class="link-menu">Appointment</a>
+                  <a href="appointment.html" class="link-menu" id="linkNav"
+                    >Appointment</a
+                  >
                 </li>
                 <li class="list-link">
-                  <a href="contact.html" class="link-menu">Contact</a>
+                  <a href="contact.html" class="link-menu" id="linkNav"
+                    >Contact</a
+                  >
                 </li>
               </ul>
-              <a href="#login" rel="modal:open" class="primary-button modal-btn"
-                >Login</a
-              >
+              <a
+                href="#login"
+                rel="modal:open"
+                id="nav-btn"
+                class="primary-button nav"
+                ><i class="fa fa-phone icon"></i
+              ></a>
             </div>
 
             <div class="hamburger">
@@ -71,16 +81,11 @@
         </nav>
       </div>
 
-      <div class="container member-page-container header">
-        <img
-          src="img/background/background-triangle.png"
-          class="triangle-bkg"
-          alt=""
-        />
+      <div class="container member-page-container">
         <div class="hero-component member-hero">
           <div class="hero-description">
             <h1 class="hero-title about-us-title">
-              Hey, I'm <span class="accent-yellow" id="memberName"></span>
+              Hey, I'm <span class="accent-yellow hero" id="memberName"></span>
             </h1>
             <p class="hero-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit aliqua. Ut
