--- a/about-us.html
+++ b/about-us.html
@@ -55,8 +55,7 @@
                 </li>
               </ul>
               <a
-              href="#login"
-              rel="modal:open"
+              href="tel:+40745667893"
               id="nav-btn"
               class="primary-button nav"
               ><i class="fa fa-phone icon"></i
