--- a/appointment.html
+++ b/appointment.html
@@ -64,11 +64,7 @@
                   >
                 </li>
               </ul>
-              <a
-                href="#login"
-                rel="modal:open"
-                id="nav-btn"
-                class="primary-button nav"
+              <a href="tel:+40745667893" id="nav-btn" class="primary-button nav"
                 ><i class="fa fa-phone icon"></i
               ></a>
             </div>
@@ -124,7 +120,7 @@
           </p>
         </div>
 
-        <div class="container appointment-form-container">
+        <div class="appointment-form-container">
           <div class="progress-container" id="steps">
             <hr class="progress-bar-back" />
             <hr class="progress-bar-front" />
