--- a/index.html
+++ b/index.html
@@ -75,11 +75,7 @@
                   >
                 </li>
               </ul>
-              <a
-                href="#login"
-                rel="modal:open"
-                id="nav-btn"
-                class="primary-button nav"
+              <a href="tel:+40745667893" id="nav-btn" class="primary-button nav"
                 ><i class="fa fa-phone icon"></i
               ></a>
             </div>
