--- a/appointment.html
+++ b/appointment.html
@@ -349,7 +349,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.0/circle-progress.min.js"></script>
 
     <script src="src/js/script.js"></script>
-    <script src="src/js/memberTeamInfo.js"></script>
+    <!-- <script src="src/js/memberTeamInfo.js"></script> -->
     <script src="src/js/appointment.js"></script>
   </body>
 </html>
