--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us</title>
 
+    <link
+      rel="shortcut icon"
+      href="img/favicon/favicon.ico"
+      type="image/x-icon"
+    />
+
     <link rel="stylesheet" href="src/scss/main.css" />
     <link
       rel="stylesheet"
@@ -91,7 +97,7 @@
         </nav>
       </div>
 
-      <div class="container header hero-contact">
+      <div class="container hero-contact">
         <div class="contact-page-hero-description">
           <div class="hero-component contact-page-hero">
             <div class="hero-description">
@@ -215,7 +221,7 @@
                 name="Message"
                 cols="30"
                 rows="10"
-                placeholder="Write your review here."
+                placeholder="Write your message here."
               ></textarea>
             </div>
 
