--- a/about-us.html
+++ b/about-us.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us</title>
 
+    <link
+    rel="shortcut icon"
+    href="img/favicon/favicon.ico"
+    type="image/x-icon"
+  />
+
     <link rel="stylesheet" href="src/scss/main.css" />
     <link
     rel="stylesheet"
