--- a/appointment.html
+++ b/appointment.html
@@ -220,7 +220,7 @@
               <h3>Choose date and time</h3>
               <form id="form-appointment">
                 <div class="item-form">
-                  <label for="date" class="label-form"
+                  <label for="date" class="label-form date-time"
                     ><i class="fa-regular fa-calendar icon"></i> Date
                     <span class="required">*</span></label
                   >
@@ -233,7 +233,7 @@
                   />
                 </div>
                 <div class="item-form">
-                  <label for="time" class="label-form"
+                  <label for="time" class="label-form date-time"
                     ><i class="fa-regular fa-clock icon"></i> Select a time
                     <span class="required">*</span></label
                   >
