--- a/about-us.html
+++ b/about-us.html
@@ -40,12 +40,12 @@
             <div class="menu">
               <ul class="list">
                 <li class="list-link">
-                  <a href="index.html" class="link-menu active" id="linkNav"
+                  <a href="index.html" class="link-menu" id="linkNav"
                     >Home</a
                   >
                 </li>
                 <li class="list-link submenu-active">
-                  <a href="about-us.html" class="link-menu space" id="linkNav"
+                  <a href="about-us.html" class="link-menu space active" id="linkNav"
                     >About Us</a
                   >
                 </li>
