--- a/appointment.html
+++ b/appointment.html
@@ -50,9 +50,7 @@
             <div class="menu">
               <ul class="list">
                 <li class="list-link">
-                  <a href="index.html" class="link-menu active" id="linkNav"
-                    >Home</a
-                  >
+                  <a href="index.html" class="link-menu" id="linkNav">Home</a>
                 </li>
                 <li class="list-link submenu-active">
                   <a href="about-us.html" class="link-menu space" id="linkNav"
@@ -60,7 +58,10 @@
                   >
                 </li>
                 <li class="list-link">
-                  <a href="appointment.html" class="link-menu" id="linkNav"
+                  <a
+                    href="appointment.html"
+                    class="link-menu active"
+                    id="linkNav"
                     >Appointment</a
                   >
                 </li>
