--- a/appointment.html
+++ b/appointment.html
@@ -220,6 +220,7 @@
             <div class="form" id="form-3">
               <h3>Choose date and time</h3>
               <form id="form-appointment">
+                <p class="message">* An appointment takes an hour!</p>
                 <div class="item-form">
                   <label for="date" class="label-form date-time"
                     ><i class="fa-regular fa-calendar icon"></i> Date
