--- a/index.html
+++ b/index.html
@@ -442,5 +442,6 @@
     <script src="src/js/jquery.validate.min.js"></script>
 
     <script src="src/js/script.js"></script>
+    <script src="src/js/sliderHero.js"></script>
   </body>
 </html>
